feat. favicon 추가, meta 태그 수정, readme 수정

--- a/index.html
+++ b/index.html
@@ -2,9 +2,59 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/assets/favicion/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/assets/favicion/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/assets/favicion/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/site.webmanifest" />
+    <link
+      rel="mask-icon"
+      href="/assets/favicion/safari-pinned-tab.svg"
+      color="#5bbad5"
+    />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PLAVE SHOP</title>
+
+    <meta name="description" content="플레이브 샵, 공식 MD 판매 " />
+    <meta name="keywords" content="상품, 아이돌, MD" />
+    <meta property="og:title" content="PLAVESHOP" />
+    <meta
+      property="og:description"
+      content="플레이브 샵, 공식 MD SHOP (아님)"
+    />
+    <meta
+      property="og:image"
+      content="https://firebasestorage.googleapis.com/v0/b/hanghea99-commerce.appspot.com/o/images%2Fog-image.png?alt=media&token=2ab6855f-30ef-4b27-ad1f-346fa369bd5c"
+    />
+    <meta property="og:url" content="https://plaveshop.vercel.app" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="PLAVESHOP" />
+    <meta
+      property="twitter:description"
+      content="마음에 드는 이벤트를 찾아보세요."
+    />
+    <meta
+      name="twitter:image"
+      content="https://firebasestorage.googleapis.com/v0/b/hanghea99-commerce.appspot.com/o/images%2Fog-image.png?alt=media&token=2ab6855f-30ef-4b27-ad1f-346fa369bd5c"
+    />
+    <meta name="twitter:url" content="https://plaveshop.vercel.app" />
+    <meta property="og:locale" content="ko_KR" />
   </head>
   <body>
     <div id="root"></div>
